--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,18 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.3  [Release on xx/11/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Related modules are not correctly imported using the module import wizard.
+- Hierarchy container tree does not update correctly when changing the parent of a 
+  container. 
+- Invalid container hierarchies are not prevented (unending loop).
+- Update all does not update items when the validation of an item fails.
+  This is fine but no error is shown to the user.
+- NullpointerException when deleting a custom made module (rarely occurs).
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8.2  [Release on 17/11/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 Maybe I am taking the 'release often' approach to its very limits.. here is yet 
