--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -10,6 +10,10 @@ Data Crow 3.8.3  [Release on xx/11/2009] [testing: high] [target: production]
 - Update all does not update items when the validation of an item fails.
   This is fine but no error is shown to the user.
 - NullpointerException when deleting a custom made module (rarely occurs).
+- Imdb.com online service was no longer working.
+  Cobra project: IMDB HTML was no longer valid for this library. The cobra.jar library
+  has been altered to correct this. 
+  The suppressed error is now written to the log.
 
 
 -----------------------------------------------------------------------------------------
