*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.8.3  [Release on xx/11/2009] [testing: high] [target: production]
+Data Crow 3.8.3  [Release on 26/11/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
