--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.4  [Release on xx/12/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Update all was no longer working.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8.3  [Release on 26/11/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
