--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -4,7 +4,8 @@ Data Crow 3.8.4  [Release on xx/12/2009] [testing: high] [target: production]
 
 [Fixed]
 - Update all was no longer working.
-
+- I have remove the skin look and feel options. These performed very bad compared to the
+  normal 
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.8.3  [Release on 26/11/2009] [testing: high] [target: production]
