*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.5  [Release on 3/12/2009] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Discogs online service no longer retrieved the tracks.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8.4  [Release on 3/12/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
