--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -4,7 +4,8 @@ Data Crow 3.8.5  [Release on 3/12/2009] [testing: high] [target: production]
 
 [Fixed]
 - Discogs online service no longer retrieved the tracks.
-- Memory leak in the card view.
+- Memory leak in the card view. Data Crow will now use a maximum amount of memory.
+  After that, additional memory is actively released to the system.
  
 
 -----------------------------------------------------------------------------------------
