--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -7,7 +7,10 @@ Data Crow 3.8.5  [Release on 3/12/2009] [testing: high] [target: production]
 - Memory leak in the card view. Data Crow will now use a maximum amount of memory.
   After that, additional memory is actively released to the system.
 - File size is cleared when saving an item of which the file does not exist.
- 
+- [2909635] Failure after installing without modules. Data Crow now actually be started
+  when non of the default modules are available.
+- Non picture fields are displayed in the pictures settings for the card view.
+- [2909608] Cannot delete empty back picture
 
 -----------------------------------------------------------------------------------------
 Data Crow 3.8.4  [Release on 3/12/2009] [testing: high] [target: production]
