--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,15 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.6  [Release on xx/01/2010] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Changed]
+- Mass updater will first search for an item using the unmodified title or name of the 
+  item. If no results were found for the specific item Data Crow will try and clean up
+  the title and find a match. Additionally the logging has been improved; the log will
+  tell you if a match was using which search string.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8.6  [Release on 31/12/2009] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 Contains for the most part bug fixes but also introduces changes to the image module.
