--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -7,6 +7,7 @@ Data Crow 3.8.7  [Release on xx/01/2010] [testing: high] [target: production]
   item. If no results were found for the specific item Data Crow will try and clean up
   the title and find a match. Additionally the logging has been improved; the log will
   tell you if a match was using which search string.
+- Added meaningful tooltips for all menu and toolbar items.
 
 
 -----------------------------------------------------------------------------------------
