--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.8.7  [Release on xx/01/2010] [testing: high] [target: production]
+Data Crow 3.8.7  [Release on 06/01/2010] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Changed]
