--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,12 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.8  [Release on xx/01/2010] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Memory issues with the images module.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8.7  [Release on 06/01/2010] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
