*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.8.8  [Release on 05/02/2010] [testing: high] [target: production]
+Data Crow 3.8.8  [Release on xx/01/2010] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
