*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -11,6 +11,7 @@ in the current Data Crow 3 version.
 - The FreeDB server did not deliver helpful error message when the disc query failed.
 - The error handling of the report creation process has been improved. 
 - Data Crow did not remember whether it's main view was maximized.
+- Table view duplicates tracks when saving a new item.
  
 
 -----------------------------------------------------------------------------------------
