*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.8.11  [Release on xx/xx/2010] [testing: high] [target: production]
+Data Crow 3.8.11  [Release on 14/03/2010] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
