--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,17 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.8.12  [Release on xx/x/2010] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- 2991768    Can't close detached dialog window after item delete
+- 2988925    Regional Settings - Decimal Grouping Error
+- 2988556    IMDB import adds trash chars to Genre item
+- 2988565    IMDB import fails to parse some years
+- 2987886    Concurrent Modification Exc. in FreeResourcesTask
+- 2987098    Containers
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.8.11  [Release on 14/03/2010] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
