--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -14,6 +14,8 @@ Data Crow 3.8.13  [Release on May xx 2010] [testing: high] [target: moderate]
 - Backup & Restore is now also available when running in the beginner experience level.
 - 2955092 Visual indication of Beginner/Expert mode
 - Added the username to the title of the Data Crow window.
+- 2943367 Filter to select Picture-Front "is empty"
+- Added "Is Filled" option to the quick filter toolbar.
 
 
 -----------------------------------------------------------------------------------------
